0.2 (2013-08-01)
----------------

- ``form_options`` attribute of FormView class allows configuration of
  deform.Form object constructor values.

- Adding a ``pyramid_deform.static_path`` Pyramid config file variable allows
  you to change the pyramid_deform static URL path segment.

0.2a5 (2012-06-30)
------------------

- Python 3 compatibility.

- Add 'get_bind_data' method to FormView, to allow subclasses the ability
  to define arbitrary data for binding with the schema.

- Add an 'appstruct' method to FormView.  This allows edit forms to
  pre-fill form values conveniently.

0.2a4 (2012-04-23)
------------------

- Add ``SessionFileUploadTempStore`` (a Deform FileUploadTempStore
  implementation that uses the Pyramid sessioning machinery and a temporary
  file on disk).

0.2a3 (2012-03-30)
------------------

- Add ``includeme`` hook for automatic configuration of translations
  and configuration of additional template search paths for the ZPT
  renderer through the INI file.

0.2a2 (2012-01-29)
------------------

- Fix broken release which didn't include all files.

0.2a1 (2012-01-28)
------------------

- This is an alpha release solely because documentation is incomplete.

- Add usage example for FormView class.

- Fix syntax error in javascript when ajax_options are not specified. Use a 
  string representing an empty javascript object as the default for 
  ajax_options.

- Add CSRFSchema class API.

0.1.6 (2011-03-24)
------------------

- Allow wizard schemas to have an "appstruct" attribute; these are used
  for wizard edit forms.

0.1.5 (2011-03-23)
------------------

- Respect a ``wizard_serializer`` attribute of a schema to allow for munging
  of the validated data before it is pickled and after it is unpickled.

0.1.4 (2010-12-17)
------------------

- Make it possible for schemas to have a ``prev_ok`` and ``next_ok``
  attribute, which should be callables.  If either returns ``False``, the