@@ -139,18 +139,75 @@ You can then write a ``PageEditView`` using
           self.request.session.flash(u"Your changes have been saved.")
           return HTTPFound(location=self.request.path_url)
 
+      def save_failure(self, e):
+          self.request.session.flash(u"You form input was not correct.")
+          return self.failure(e)
+
       def appstruct(self):
           context = self.request.context
           return {'title': context.title,
                   'description': context.description,
                   'body': context.body}
 
-Note that ``save_success`` is only called when the form input
-validates.  E.g. it's not called when the ``title`` is left blank, as
-it's a required field.
+
+Form input and validation
+^^^^^^^^^^^^^^^^^^^^^^^^^
+
+When a request is received from the above view, the ``FormView`` callable
+determines what should happen with the request.  The incoming request is
+validated against the given form (and thus the schema), and depending on the
+button that the user pressed to submit the form, and whether the form input validates or not a certain instance method will be called.  This given method
+will be named either ``buttonID_success`` or ``buttonID_failure``, where
+``buttonID`` is the identifier of the button pressed and the suffix is
+determined on whether the form validated or not.
+
+Considering the above example:
+
+* If the form validator succeeds, then ``save_success`` will be called with
+  the correct ``appstruct`` as the first argument.  In the example above, this
+  method is not called when the ``title`` is left blank, as it is a required
+  field.
+  
+  Such a method *must* be specified for any given button on the form, if
+  any others were specified as part of ``buttons``.
+
+* If the form validator fails, then ``save_failure`` will be called with the
+  resulting ``deform.exception.ValidationFailure`` as the first argument.
+
+  If such a named method was not present on the given ``FormView``-derived
+  class, then the default action is to call the ``failure(e)`` method, 
+  which re-renders the given form with appropriate error messages.
+
+In either ``*_success`` or ``*_failure`` methods, you may find yourself
+wanting to re-render the whole ``FormView`` and return this as a response.  For
+instance, you may encounter the situation where a user successfully submits a
+form, and you want to immediately re-render the given form (rather than sending
+a HTTP redirect, for instance).  Likewise, you may like to customise the
+response within the given method before it is sent back to the user (for 
+instance, to display custom messages or do anything else).
+
+This would typically just involve calling ``self()`` from within a
+``save_success`` (or similar) method and returning the response.  However, this
+call method checks for buttons present within the request, so you will end up
+with infinite recursion as the call method calls the button handler and so
+forth.  You can break this cycle by telling ``FormView``'s default call method
+to ignore button handlers like so::
+
+    def save_success(self, appstruct):
+        response = self(ignore_buttons=True)
+        #Do some fancy processing or add things to response
+        response['my_variable'] = 'dummy'
+        return response
+
+
+Appstruct
+^^^^^^^^^
 
 We use the ``appstruct`` method to pre-fill the form with values from
 the page object that we edit (i.e. ``context``).
+
+Form options
+^^^^^^^^^^^^
 
 We also provide a ``form_options`` two-tuple -- this structure can contain
 any options to be passed as keyword arguments to the form class' ``__init__``
@@ -158,6 +215,9 @@ method.  In the case above, we customise the ID for the form using the
 ``formid`` and ``method`` options but could change the ``action``
 and more.  For more details, see 
 http://deform.readthedocs.org/en/latest/api.html#deform.Form.
+
+View registration
+^^^^^^^^^^^^^^^^^
 
 The ``PageEditView`` is registered like any other Pyramid view.  Maybe
 like this:
@@ -173,6 +233,9 @@ like this:
       permission='edit',
       renderer='myapp:templates/form.pt',
       )
+
+Templating
+^^^^^^^^^^
 
 Your template in ``myapp:templates/form.pt`` will receive ``form`` as
 a variable: this is the rendered form.  Your template might look
@@ -202,6 +265,7 @@ something like this::
 
 Deferred Colander Schemas
 -------------------------
+
 ``pyramid_deform.FormView`` will `bind
 <http://docs.pylonsproject.org/projects/colander/en/latest/binding.html>`_ the
 schema by default to the pyramid request. You may wish to bind additional data
